tests/specs/default_exports_declared_earlier.txt
# mod.ts
function foo(): void {}
export default foo;

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:1:1
  | 
1 | function foo(): void {}
  | ^

# output.txt
Defined in file:///mod.ts:1:1

function default(): void


# output.json
[
  {
    "kind": "function",
    "name": "default",
    "isDefault": true,
    "location": {
      "filename": "file:///mod.ts",
      "line": 1,
      "col": 0,
      "byteIndex": 0
    },
    "declarationKind": "export",
    "functionDef": {
      "params": [],
      "returnType": {
        "repr": "void",
        "kind": "keyword",
        "keyword": "void"
      },
      "hasBody": true,
      "isAsync": false,
      "isGenerator": false,
      "typeParams": []
    }
  }
]
